--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 .settings
 .springBeans
 .sts4-cache
+application.yml
 
 ### IntelliJ IDEA ###
 .idea
@@ -18,9 +19,5 @@
 *.ipr
 /out/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+### Firebase ###
+todolist-yuyuyuyuyu-firebase-adminsdk.json
